--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "node preinstall.js bot.js"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
